# uetparser

./: .dockerignore  .gitignore  .project_structure_filter  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  utils.py
api/: Dockerfile  alembic.ini  example_json.json  main.py  models.py  tasks.py  test.py
api/core/: exceptions.py  logger.py  prompts.py  utils.py
api/database/: db.py  deps.py  jobs.py  models.py
api/migration/: env.py
api/migration/versions/: d29c63f2dfa7_init.py
api/migrations/: env.py
api/migrations/versions/: 0c847d9a1155_init.py
api/worker/: celery_app.py
parser/parser/: items.py  middlewares.py  pipelines.py  settings.py
parser/parser/spiders/: item_spider.py
uetparser/: scrapy.cfg
uetparser/uetparser/: basic_spider.py  pipelines.py  settings.py
uetparser/uetparser/spiders/: item_spider.py
