[project]
name = "uetparser"
version = "0.1.0"
description = "ETL pipeline for uet"
authors = [
    {name = "Stepan",email = "s.ibatulov@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "googlesearch-python (>=1.3.0,<2.0.0)",
    "openai (>=1.93.0,<2.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "scrapy (>=2.13.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
