[project]
name = "uetparser"
version = "0.1.0"
description = "ETL pipeline for uet"
authors = [
    {name = "Stepan",email = "s.ibatulov@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "openai (>=1.93.0,<2.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "html2text (>=2025.4.15,<2026.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "html-to-markdown (>=1.4.0,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "curl-cffi (>=0.12.0,<0.13.0)",
    "redis (>=6.2.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "gevent (>=25.5.1,<26.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "yandex-search-api (>=0.1.8,<0.2.0)",
    "limits (>=5.4.0,<6.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "playwright (>=1.53.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
